--- a/terminal/res/layout-land/input_data.xml
+++ b/terminal/res/layout-land/input_data.xml
@@ -75,7 +75,7 @@
                 android:layout_marginLeft="@dimen/global_padding" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/global_padding"
@@ -86,6 +86,30 @@
                     android:layout_width="100dip"
                     android:layout_height="wrap_content"
                     android:text="@string/input_data_time_now" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/inputData_resultTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:text="@string/input_data_no_result"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <Button
+                    android:id="@+id/inputData_okButton"
+                    android:layout_width="100dip"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="@dimen/global_padding"
+                    android:text="@string/input_data_ok" />
             </LinearLayout>
         </LinearLayout>
 
@@ -120,40 +144,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/global_padding" >
             </TableLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/global_padding" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right" >
-
-                    <TextView
-                        android:id="@+id/inputData_resultTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:text="@string/input_data_no_result"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                    <Button
-                        android:id="@+id/inputData_okButton"
-                        android:layout_width="100dip"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/global_padding"
-                        android:text="@string/input_data_ok" />
-                </LinearLayout>
-            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
