--- a/terminal/res/layout/main.xml
+++ b/terminal/res/layout/main.xml
@@ -10,47 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/main_dataBaseFileLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="@string/main_database_file"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/Red" />
-
-            <TextView
-                android:id="@+id/main_dataBaseConnectionLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="@dimen/global_padding"
-                android:text="@string/main_database_connection_NOK"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/Red" />
-
-            <TextView
-                android:id="@+id/main_currentRaidIDLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="@dimen/global_padding"
-                android:text="@string/main_current_raid_id"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/Red" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="@dimen/main_buttons_panel_height" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,18 +48,62 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/global_double_padding"
                 android:text="@string/main_settings" />
-
-            <!--
-    <Button
-        android:id="@+id/main_fillDataBtn"
-        android:layout_width="@dimen/main_button_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/global_double_padding"
-        android:text="@string/main_fill_data" />
-            -->
-
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/main_dataBaseFileLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/main_database_file"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/LightPink" />
+
+        <TextView
+            android:id="@+id/main_dataBaseConnectionLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding"
+            android:text="@string/main_database_connection_NOK"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/LightPink" />
+
+        <TextView
+            android:id="@+id/main_userIDLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding"
+            android:text="@string/main_user_id"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/LightPink" />
+
+        <TextView
+            android:id="@+id/main_deviceIDLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding"
+            android:text="@string/main_device_id"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/LightPink" />
+
+        <TextView
+            android:id="@+id/main_currentRaidIDLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding"
+            android:text="@string/main_current_raid_id"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/LightPink" />
     </LinearLayout>
 
 </LinearLayout>
