--- a/terminal/res/layout/transp_import.xml
+++ b/terminal/res/layout/transp_import.xml
@@ -9,15 +9,15 @@
     android:paddingTop="@dimen/global_padding" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
         <TextView
             android:id="@+id/transpImport_fileName"
-            android:layout_width="400dip"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_weight="1"
             android:text="@string/transp_import_no_file_selected"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -93,9 +93,9 @@
         android:id="@+id/transpImport_messagesScroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/global_padding"
         android:fillViewport="true"
-        android:scrollbars="vertical"
-        android:layout_marginTop="@dimen/global_padding" >
+        android:scrollbars="vertical" >
 
         <TextView
             android:id="@+id/transpImport_messages"
