--- a/terminal/res/values/dimensions.xml
+++ b/terminal/res/values/dimensions.xml
@@ -5,6 +5,8 @@
     <dimen name="small_padding">10dip</dimen>
     <dimen name="global_double_padding">30dip</dimen>
     <dimen name="main_button_width">300dip</dimen>
+    <dimen name="main_buttons_panel_height">400dip</dimen>
+    <dimen name="main_buttons_panel_width">400dip</dimen>
     <dimen name="main_button_text_size">32sp</dimen>
 
 </resources>
