--- a/terminal/res/layout-land/main.xml
+++ b/terminal/res/layout-land/main.xml
@@ -46,6 +46,14 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/global_padding"
                 android:text="@string/main_export_data" />
+            
+            <Button
+                android:id="@+id/main_resultsBtn"
+                android:layout_width="@dimen/main_button_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/global_double_padding"
+                android:text="@string/main_results" />
 
             <Button
                 android:id="@+id/main_settingsBtn"
