--- a/terminal/res/layout/main.xml
+++ b/terminal/res/layout/main.xml
@@ -50,6 +50,14 @@
                 android:text="@string/main_export_data" />
 
             <Button
+                android:id="@+id/main_resultsBtn"
+                android:layout_width="@dimen/main_button_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/global_double_padding"
+                android:text="@string/main_results" />
+
+            <Button
                 android:id="@+id/main_settingsBtn"
                 android:layout_width="@dimen/main_button_width"
                 android:layout_height="wrap_content"
@@ -62,6 +70,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/global_padding"
         android:orientation="vertical" >
 
         <TextView
