--- a/site/styles/mmb.css
+++ b/site/styles/mmb.css
@@ -126,5 +126,75 @@ div.team_res > span {
     display: inline-block;
 }
 
+body {
+	font-family: 'Inter', 'Segoe UI', Roboto, sans-serif;
+}
 
 
+.menu a {
+    color: rgb(22, 163, 74);
+    line-height: 1.5rem;
+    font-weight: bo ld;
+    font-family: Tahoma;
+
+}
+
+
+div.HeadText {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+input[type="text"], input[type="password"], select {
+    padding: 0.5rem 0.75rem;
+    border: 1px solid rgb(209, 213, 219);
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    box-sizing: border-box;
+    width: 100px;
+}
+
+input[type="submit"] {
+    margin-top: 0.5rem;
+    padding: 0.5rem 1rem;
+    border-radius: 0.375rem;
+    font-size: 0.875rem;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    text-align: center;
+}
+
+/* Поле пароля */
+input[name="Password"] {
+	min-width:125px
+}
+
+input[name="RegisterButton"] {
+    background-color: #047857;
+    color: white;
+    border: medium;
+	margin: 0!important;
+}
+
+input[name="RegisterButton"]:hover {
+    background-color: #047857;
+}
+
+input[name="FindString"], input[name="TeamNum"] {
+    font-size: 0.75rem;
+    padding: 0.5rem;
+    width: 9.5em !important;
+}
+
+input[name="FindButton"] {
+    background-color: #2563eb;
+    color: white;
+    min-width: 70px;
+    border: medium;
+}
+
+input[name="FindButton"]:hover {
+    background-color: #1d4ed8;
+}
